set minimum scale to prevent automatic scaling on mobile. Fix sizes and positions of increment and decrement buttons

--- a/src/app/shared/components/product-card/product-card.component.css
+++ b/src/app/shared/components/product-card/product-card.component.css
@@ -9,3 +9,12 @@
   height: 90%;
   max-width: 300px;
 }
+
+.card-body {
+  overflow-y: hidden;
+  -ms-overflow-style: none;
+}
+
+.card-body::-webkit-scrollbar {
+  display: none;
+}
